--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,4 @@
+#LogIn
 
 * {font-family: 'Poppins', sans-serif;
 }
@@ -33,7 +34,18 @@ body {
 
 .logo h1 {
   margin: 0;
-  color: #000;
+  font-weight: lighter;
+  color: #ffffff;
+  h1 {
+  font-size: 28px;
+  font-weight: 700; /* Bold for first word */
+}
+
+h1 span {
+  font-weight: 400; /* Lighter for second word */
+  color: white;     /* Optional: accent color */
+}
+
 }
 
 .logo span {
