--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,4 +1,9 @@
 #LogIn
+.yellow-wrapper {
+  background-color: #f1c40f; /* yellow */
+  padding: 40px 30px;        /* creates top & bottom yellow */
+  border-radius: 20px;
+}
 
 * {font-family: 'Poppins', sans-serif;
 }
