--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -88,6 +88,16 @@ button {
   cursor: pointer;
 }
 
+.forgotpassword {
+  display: block;
+  font: Inter, sans-serif;
+  font-size: 12px;
+  color: #ffffff;
+  text-align: left;
+  margin-top: 15px;
+  text-decoration: none;
+}
+
 button:hover {
   opacity: 0.9;
 }
