--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -70,7 +70,7 @@ h1 {
 
 .forgot {
   display: block;
-  font: Inter, sans-serif;
+  font: Inter;
   font-size: 12px;
   color: #ffffff;
   text-align: left;
@@ -86,16 +86,6 @@ button {
   border-radius: 12px;
   font-weight: bold;
   cursor: pointer;
-}
-
-.forgotpassword {
-  display: block;
-  font: Inter, sans-serif;
-  font-size: 12px;
-  color: #ffffff;
-  text-align: left;
-  margin-top: 15px;
-  text-decoration: none;
 }
 
 button:hover {
