--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -69,6 +69,24 @@ h1 {
   font-size: 14px;
 }
 
+.login-btn {
+  width: 100%;
+  padding: 12px;
+  margin-top: 15px;
+  background-color: #f5b700;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.login-btn:hover {
+  background-color: #e0a800;
+}
+
+
 .forgot {
   display: block;
   font: Inter;
