--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,25 +1,20 @@
-*body {
+* {
+  box-sizing: border-box;
+  h1 {
+  color: #ffffff; /* white */
+  font-family: "Poppins", "Inter", "Montserrat", "Roboto", sans-serif;
+}
+}
+
+body {
   margin: 0;
   background: #ffffff;
-  font-family: 'Inter', sans-serif;
 }
 
-.page {
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.login-card {
+.bar {
+  height: 25px;
   background: #f2c200;
-  width: 340px;
-  padding: 30px 25px;
-  border-radius: 20px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-  text-align: center;
 }
-
 
 .container {
   display: flex;
@@ -73,24 +68,6 @@ h1 {
   border-radius: 10px;
   font-size: 14px;
 }
-
-.login-btn {
-  width: 100%;
-  padding: 12px;
-  margin-top: 15px;
-  background-color: #f5b700;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-.login-btn:hover {
-  background-color: #e0a800;
-}
-
 
 .forgot {
   display: block;
