--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -73,9 +73,10 @@ h1 {
   display: block;
   font: Inter;
   font-size: 12px;
-  color: #ffffff;
+  color: #040404;
   text-align: left;
   margin-bottom: 15px;
+  margin-left: 5px;
   text-decoration: none;
 }
 
@@ -91,5 +92,15 @@ h1 {
 
 .button:hover {
   opacity: 0.9;
+}
+.login-button{
+  color: rgb(255, 255, 255);
+  background-color: #f2c200;
+  padding: 15px;
+  padding-left:25px;
+  padding-right: 25px;
+ border: none;
+  border-radius: 12px;
+
 }
 
