--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -26,6 +26,7 @@ body {
 .card {
   background: #f2c200;
   width: 539px;
+  height: 637px;
   padding: 30px;
   border-radius: 20px;
   text-align: center;
