--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -101,11 +101,13 @@ h1 {
   color: rgb(255, 255, 255);
   background-color: #f2c200;
   padding: 15px;
-  padding-left:25px;
-  padding-right: 25px;
- border: none;
- font-weight: bold;
+  padding-left:40px;
+  padding-right: 40px;
+  border: none;
+  font-weight: bold;
+  font-size: 17px;
   border-radius: 12px;
+  cursor: pointer;
 
 }
 
