--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -81,10 +81,10 @@ h1 {
   display: block;
   font-family: "Inter", sans-serif;
   font-size: 12px;
-  color: #ffffff;
+  color:  rgb(100, 100, 100);
   text-align: left;
-  margin-bottom: 15px;
-  margin-left: 5px;
+  margin-bottom: 3px;
+  margin-left: 8px;
   text-decoration: none;
 }
 
