--- a/templates/investigation.html
+++ b/templates/investigation.html
@@ -307,6 +307,25 @@
             <input type="text">
         </div>
 
+        <!-- Nature & Extend of Injury/ies -->
+        <div class="section">
+            <div class="section-title">Nature & Extend of Injury/ies</div>
+
+            <div>
+                <label>Extend of Disability :</label>
+                    <select>
+                        <option>Medical Treatment</option>
+                        <option>Fatal</option>
+                        <option>Permanent Partial</option>
+                        <option>Temporary Total</option>
+                        <option>Permanent Total</option>
+                    </select>
+            </div>
+
+            <label>Contributing Factor:</label>
+            <input type="text">
+        </div>
+
         <!-- SUBMIT -->
         <div class="actions">
             <button type="submit" class="submit-btn">Submit</button>
