--- a/templates/investigation.html
+++ b/templates/investigation.html
@@ -311,10 +311,29 @@
                     </select>
             </div>
 
-            <label>Contributing Factor:</label>
-            <input type="text">
+            <div>
+                <label>Nature of Injury :</label>
+                    <select>
+                        <option>Fractures</option>
+                        <option>Dislocations</option>
+                        <option>Prains and Strains</option>
+                        <option>Concussions and Other Internal Injuries</option>
+                        <option>Amputations and  Enucleations</option>
+                        <option>Other wounds</option>
+                        <option>Superficial injuries</option>
+                        <option>Contusions and  crushing</option>
+                        <option>Burns</option>
+                        <option>Acute poisonings</option>
+                        <option>Effects of weather  exposure, and related  conditions</option>
+                        <option>Asphyxia</option>
+                        <option>Effects of electric  currents</option>
+                        <option> Effects of radiations</option>
+                        <option> Multiple injuries of different nature</option>
+                        <option> Other and unspecified  injuries</option>
+                    </select>
+            </div>
         </div>
-        
+
         <!-- ROOT CAUSE -->
         <div class="section">
             <div class="section-title">Root Cause Analysis</div>
