--- a/templates/investigation.html
+++ b/templates/investigation.html
@@ -332,7 +332,144 @@
                         <option> Other and unspecified  injuries</option>
                     </select>
             </div>
-        </div>
+
+            <div>
+                <label>Type of Contact : </label>
+                    <select>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                    </select>
+            </div>
+
+            <div>
+                    <label>Part/s of Body Affected </label>
+            </div>
+
+            <div class="row">
+                <div class="columns">
+                    <div>
+                        <label>Head </label>
+                        <input type="checkbox">
+                     </div>
+                    <div>
+                        <label>Front Neck </label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Back Neck </label>
+                        <input type="checkbox">
+                    </div>
+                </div>
+
+                <div class="columns">
+                    <div>
+                        <label>Chest </label>
+                        <input type="checkbox">
+                     </div>
+                    <div>
+                        <label>Abdomen</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Upper Back</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Lower Back</label>
+                        <input type="checkbox">
+                    </div>
+                </div>
+
+                <div class="columns">
+                    <div>
+                        <label>Left Arm</label>
+                        <input type="checkbox">
+                     </div>
+                    <div>
+                        <label>Right Arm</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Left Forearm</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Right Forearm</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Left Hand</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Right Hand</label>
+                        <input type="checkbox">
+                    </div>
+                </div>
+
+                <div class="columns">
+                    <div>
+                        <label>Groin </label>
+                        <input type="checkbox">
+                     </div>
+                    <div>
+                        <label>Buttocks</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Left Thigh</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Right Thigh</label>
+                        <input type="checkbox">
+                    </div>
+                </div>
+
+                <div class="columns">
+                    <div>
+                        <label>Left Leg </label>
+                        <input type="checkbox">
+                     </div>
+                    <div>
+                        <label>Right Leg</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Left Foot</label>
+                        <input type="checkbox">
+                    </div>
+                    <div>
+                        <label>Right Foot</label>
+                        <input type="checkbox">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                    <div>
+                        <label>Date Illness Began:</label>
+                        <input type="date">
+                    </div>
+                    <div>
+                        <label>Date Returned to Work:</label>
+                        <input type="date">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div>
+                        <label>Day Lost :</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label>and/or Day Charged :</label>
+                        <input type="text">
+                    </div>
+                </div>
 
         <!-- ROOT CAUSE -->
         <div class="section">
