--- a/templates/investigation.html
+++ b/templates/investigation.html
@@ -471,14 +471,76 @@
                     </div>
                 </div>
 
+         <!-- Cause of Accident -->
+        <div class="section">
+            <div class="section-title">Cause of Accident</div>
+
+            <label> The Agency Involved :</label>
+            <input type="text">
+
+            <label>The Agency part Involved :</label>
+            <input type="text">
+
+            <div>
+                <label>Accident Type :</label>
+                    <select>
+                        <option>Falls of persons</option>
+                        <option>Falls of persons from heights</option>
+                        <option>Falls of persons on the same level</option>
+                        <option>Struck by falling objects</option>
+                        <option>Slides and cave-ins</option>
+                        <option>Collapse (buildings, walls, scaffolds, ladders, piles of goods)</option>
+                        <option>Struck by falling objects during handling</option>
+                        <option>Struck by falling objects, not elsewhere classified</option>
+                        <option>Stepping on, striking against or struck by objects excluding falling objects</option>
+                        <option>Stepping on objects</option>
+                        <option>Striking against stationary objects (except impacts due to a previous fall)</option>
+                        <option>Striking against moving objects</option>
+                        <option>Struck by moving objects (including flying fragments and excluding falling objects particles)</option>
+                        <option>Caught in or between objects</option>
+                        <option>Caught in an object</option>
+                        <option>Caught between a stationary object and a moving object</option>
+                        <option>Caught between moving objects (except flying or falling objects)</option>
+                        <option>Overexertion or strenuous movements</option>
+                        <option>Overexertion in lifting objects</option>
+                        <option>Overexertion in pushing or pulling objects</option>
+                        <option>Overexertion in handling or throwing objects</option>
+                        <option>Strenuous movements</option>
+                        <option>Exposure to or contact with extreme temperatures</option>
+                        <option>Exposure to heat (atmosphere or environment)</option>
+                        <option>Exposure to cold (atmosphere or environment)</option>
+                        <option>Contact with hot substances or objects</option>
+                        <option>Contact with very cold substances or objects</option>
+                        <option>Exposure to or contact with electric current</option>
+                        <option>Exposure to or contact with harmful substances or radiations</option>
+                        <option>Contact by inhalation, ingestion or absorption of harmful substances</option>
+                        <option>Exposure to ionizing radiations</option>
+                        <option>Exposure to radiations other than ionizing radiations</option>
+                        <option>Other types of accident, not elsewhere classified, including accidents not classified for lack of sufficient data</option>
+                        <option>Other types of accident, not elsewhere classified</option>
+                        <option>Accidents not classified for lack of sufficient data</option>
+                    </select>
+            </div>
+
+            <label>Unsafe Mechanical or Physical Condition :</label>
+            <input type="text">
+
+            <label>The Unsafe Act :</label>
+            <input type="text">
+
+            <label>Contributing Factor :</label>
+            <input type="text">
+
+        </div>
+
         <!-- ROOT CAUSE -->
         <div class="section">
             <div class="section-title">Root Cause Analysis</div>
 
-            <label>Activity / Task:</label>
+            <label> The Agency Involved :</label>
             <input type="text">
 
-            <label>Contributing Factor:</label>
+            <label>The Agency part Involved :</label>
             <input type="text">
         </div>
 
