--- a/templates/investigation.html
+++ b/templates/investigation.html
@@ -207,7 +207,6 @@
             <label>Reportable Illness:</label>
             <input type="text">
 
-            
                 <div>
                     <label>If reported illness is COVID-19, was it fatal?
                         <div class="checkbox-group">
@@ -597,7 +596,220 @@
                 <input type="text">
             </div>
 
+            <div>
+                <label>Work Instruction Available ? :
+                    <div class="checkbox-group">
+                        <label>Yes</label>
+                        <input type="checkbox"> 
+                        <label>No</label>
+                        <input type="checkbox"> 
+                    </div>
+                </label>
+            </div>
+
+            <div>
+                <label>Training Recieved ? :
+                    <div class="checkbox-group">
+                        <label>Yes</label>
+                        <input type="checkbox"> 
+                        <label>No</label>
+                        <input type="checkbox"> 
+                    </div>
+                </label>
+            </div>
+            
+            <div>
+                <label>PPE Provied ? :
+                    <div class="checkbox-group">
+                        <label>Yes</label>
+                        <input type="checkbox"> 
+                        <label>No</label>
+                        <input type="checkbox"> 
+                    </div>
+                </label>
+            </div>
+
+            <div>
+                <label>PPE used ? :
+                    <div class="checkbox-group">
+                        <label>Yes</label>
+                        <input type="checkbox"> 
+                        <label>No</label>
+                        <input type="checkbox"> 
+                    </div>
+                </label>
+            </div>
+
+            <div>
+                <label>Contributing Factor : 
+                    <div class="checkbox-group">
+                        <label>Unsafe Act</label>
+                        <input type="checkbox"> 
+                        <label>Unsafe Condition</label>
+                        <input type="checkbox"> 
+                    </div>
+                </label>
+            </div>
+
+            <div>
+                <label>Inedequate Leadership or Supervision : </label>
+                    <select>
+                        <option>Giving inadequate policy, procedure, practices or guidelines</option>
+                        <option>Inadequate work planning or programming</option>
+                        <option>Improper or insufficient delegation</option>
+                        <option>Unclear or conflicting assignment of responsibility</option>
+                        <option>Inadequate instructions, orientation and/or training</option>
+                        <option>Unclear or conflicting reporting relationships</option>
+                        <option>Inadequate matching of individual qualifications and job/task requirements</option>
+                        <option>Providing inadequate reference documents, directives and guidance publications</option>
+                    </select>
+            </div>
+
+            <div>
+                <label>Inedequate Engineering : </label>
+                    <select>
+                        <option>Inadequate monitoring of construction</option>
+                        <option>Inadequate or improper controls</option>
+                    </select>
+            </div>
+
+            <div>
+                <label>Inedequate Purchasing : </label>
+                    <select>
+                        <option>Improper salvage and/or waste disposal</option>
+                        <option>Inadequate receiving inspection and acceptance</option>
+                        <option>Improper transporting of materials</option>
+                        <option>Inadequate research on materials/equipment</option>
+                        <option>Inadequate communication of safety and health data</option>
+                        <option>Inadequate contractor selection</option>
+                        <option>Inadequate specifications on requisitions</option>
+                        <option>Inadequate identification of hazardous items</option>
+                        <option>Inadequate specifications to vendors</option>
+                    </select>
+            </div>
+
+            <div>
+                <label>Inadequate Physical or Physiological Capability :</label>
+                    <select>
+                        <option>Hearing deficiency</option>
+                        <option>Substance sensitivities or allergies</option>
+                        <option>Inappropriate height, weight, size, strength, reach</option>
+                        <option>Vision deficiency</option>
+                        <option>Limited ability to sustain body positions</option>
+                        <option>Restricted range of body movement</option>
+                        <option>Sensitivities to sensory extremes (temperature, sound, etc.)</option>
+                    </select>
+            </div>
+
+            <div>
+                <label>Inadequate Mental or Psychological Capability :</label>
+                    <select>
+                        <option>Emotional disturbance</option>
+                        <option>Poor judgement</option>
+                        <option>Inability to comprehend</option>
+                        <option>Slow reaction time</option>
+                        <option>Low learning aptitude</option>
+                        <option>Poor coordination</option>
+                        <option>Low mechanical aptitude</option>
+                    </select>
+            </div>
+
+            <div>
+                <label>Physical or Physiological Stress :</label>
+                    <select>
+                        <option>Constrained movement</option>
+                        <option>Fatigue due to sensory overload</option>
+                        <option>Exposure to health hazards</option>
+                        <option>Fatigue due to task load or duration</option>
+                        <option>Exposure to temperature extremes</option>
+                        <option>Injury or Illness</option>
+                        <option>Fatigue due to lack of rest</option>
+                        <option>Oxygen Deficiency</option>
+                    </select>
+            </div>
+
+            <div>
+                <label>Lack of Knowledge :</label>
+                    <select>
+                        <option>Inadequate initial training</option>
+                        <option>Inadequate orientation</option>
+                        <option>Inadequate update training</option>
+                        <option>Lack of experience</option>
+                        <option>Misunderstood directions</option>
+                    </select>
+            </div>
+
+            <div>
+                <label>Lack of Skill :</label>
+                    <select>
+                        <option>Inadequate initial instruction</option>
+                        <option>Inadequate practice</option>
+                        <option>Inadequate review instruction</option>
+                        <option>Infrequent performance</option>
+                        <option>Lack of coaching</option>
+                    </select>
+            </div>
+
         </div>
+
+        <!-- Control/Preventive Measures -->
+        <div class="section">
+            <div class="section-title">Control/Preventive Measures</div>
+
+            <label>Preventive Measures (taken or recommended):</label>
+            <input type="text">
+            <label>Mechanical guards, personal protective equipment and other safeguards</label>
+            <input type="text">
+            <div>
+                <label>Were all safeguards in use? 
+                    <div class="checkbox-group">
+                        <label>Yes</label>
+                        <input type="checkbox"> 
+                        <label>No</label>
+                        <input type="checkbox"> 
+                    </div>
+                </label>
+            </div>
+
+            <label>If not, Why?</label>
+            <textarea></textarea>   
+
+            <label>Control Instituted :</label>
+
+            <div class="row">
+                <div>
+                    <label>Engineering : </label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Cost :</label>
+                    <input type="text">
+                </div>
+            </div>
+
+            <div class="row">
+                <div>
+                    <label>Administrative: </label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Cost :</label>
+                    <input type="text">
+                </div>
+            </div>
+
+            <div class="row">
+                <div>
+                    <label>PPE: </label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Cost :</label>
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+
 
         <!-- SUBMIT -->
         <div class="actions">
